--- a/limpieza adicional.ipynb
+++ b/limpieza adicional.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "28bd2877",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "3bdb71a5",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "[2 rows x 33 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "8651ef78",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "093e58e9",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "97405930",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "c4bef4a2",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_198245/3216805034.py:15: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'A&T Legal Group' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/tmp/ipykernel_10861/3216805034.py:15: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'A&T Legal Group' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df.loc[df['Account Name'] == firm, 'AccountName_Clean'] = clean\n"
      ]
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "fdb8f4d2",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "ac08df03",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "b6cffb14",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
        "85"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "b362cff0",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,299 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
+   "id": "f89f3a2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Case Name</th>\n",
+       "      <th>Account Name</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Rate</th>\n",
+       "      <th>Provider Client</th>\n",
+       "      <th>DOL</th>\n",
+       "      <th>Subject</th>\n",
+       "      <th>Name of Procedure</th>\n",
+       "      <th>Case Stage</th>\n",
+       "      <th>Stage Chg Dt</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Inv 1 Pd Dt</th>\n",
+       "      <th>Inv 1 Pd $</th>\n",
+       "      <th>Inv 2 Pd Dt</th>\n",
+       "      <th>Inv 2 Pd $</th>\n",
+       "      <th>Inv 3 Pd Dt</th>\n",
+       "      <th>Inv 3 Pd $</th>\n",
+       "      <th>Funding Status</th>\n",
+       "      <th>Case Notes</th>\n",
+       "      <th>Lien Notes</th>\n",
+       "      <th>Case Status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Sundae McGrath</td>\n",
+       "      <td>Ace Law Group</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pueblo Medical Imaging</td>\n",
+       "      <td>09/06/2018</td>\n",
+       "      <td>SMcGrath1</td>\n",
+       "      <td>MRI Lumbar Spine wo Contrast</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>01/21/2025</td>\n",
+       "      <td>...</td>\n",
+       "      <td>01/20/2025</td>\n",
+       "      <td>907.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Purchased</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>02,20 Settled</td>\n",
+       "      <td>request has been sent to the finance departmen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Sumala Chuencharoewong</td>\n",
+       "      <td>Ace Law Group</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pueblo Medical Imaging</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SChuen1</td>\n",
+       "      <td>MRI Cervical Spine wo Contrast</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>09/28/2023</td>\n",
+       "      <td>...</td>\n",
+       "      <td>05/27/2020</td>\n",
+       "      <td>940.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Purchased</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Payment DT 05-27-2020 \\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Chai Chuencharoenwong</td>\n",
+       "      <td>Ace Law Group</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pueblo Medical Imaging</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CChuench1</td>\n",
+       "      <td>MRI Cervical Spine wo Contrast</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>09/27/2023</td>\n",
+       "      <td>...</td>\n",
+       "      <td>05/27/2020</td>\n",
+       "      <td>990.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Purchased</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>payment dt 05-27-2020 \\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Derek Bell</td>\n",
+       "      <td>Ace Law Group</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pueblo Medical Imaging</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Lien1</td>\n",
+       "      <td>MRI Joint Upper Extremity wo Dye</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>01/13/2022</td>\n",
+       "      <td>...</td>\n",
+       "      <td>06/21/2021</td>\n",
+       "      <td>825.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Purchased</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>02,20 Settled</td>\n",
+       "      <td>2/20/20: Settled per case mgr, \\nPaid complete...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Derek Bell</td>\n",
+       "      <td>Ace Law Group</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pueblo Medical Imaging</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Lien2</td>\n",
+       "      <td>MRI Cervical Spine wo Contrast</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>01/13/2022</td>\n",
+       "      <td>...</td>\n",
+       "      <td>06/21/2021</td>\n",
+       "      <td>825.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Purchased</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2/20/20: Settled per case mgr, \\nPaid complete...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Case Name   Account Name State Rate         Provider Client  \\\n",
+       "42          Sundae McGrath  Ace Law Group   NaN  NaN  Pueblo Medical Imaging   \n",
+       "43  Sumala Chuencharoewong  Ace Law Group   NaN  NaN  Pueblo Medical Imaging   \n",
+       "44   Chai Chuencharoenwong  Ace Law Group   NaN  NaN  Pueblo Medical Imaging   \n",
+       "45              Derek Bell  Ace Law Group   NaN  NaN  Pueblo Medical Imaging   \n",
+       "46              Derek Bell  Ace Law Group   NaN  NaN  Pueblo Medical Imaging   \n",
+       "\n",
+       "           DOL    Subject                 Name of Procedure Case Stage  \\\n",
+       "42  09/06/2018  SMcGrath1      MRI Lumbar Spine wo Contrast  Completed   \n",
+       "43         NaN    SChuen1    MRI Cervical Spine wo Contrast  Completed   \n",
+       "44         NaN  CChuench1    MRI Cervical Spine wo Contrast  Completed   \n",
+       "45         NaN      Lien1  MRI Joint Upper Extremity wo Dye  Completed   \n",
+       "46         NaN      Lien2    MRI Cervical Spine wo Contrast  Completed   \n",
+       "\n",
+       "   Stage Chg Dt  ... Inv 1 Pd Dt Inv 1 Pd $  Inv 2 Pd Dt  Inv 2 Pd $  \\\n",
+       "42   01/21/2025  ...  01/20/2025      907.5          NaN         0.0   \n",
+       "43   09/28/2023  ...  05/27/2020      940.5          NaN         NaN   \n",
+       "44   09/27/2023  ...  05/27/2020      990.0          NaN         NaN   \n",
+       "45   01/13/2022  ...  06/21/2021      825.0          NaN         0.0   \n",
+       "46   01/13/2022  ...  06/21/2021      825.0          NaN         0.0   \n",
+       "\n",
+       "   Inv 3 Pd Dt Inv 3 Pd $ Funding Status  Case Notes     Lien Notes  \\\n",
+       "42         NaN        0.0      Purchased         NaN  02,20 Settled   \n",
+       "43         NaN        NaN      Purchased         NaN            NaN   \n",
+       "44         NaN        NaN      Purchased         NaN            NaN   \n",
+       "45         NaN        0.0      Purchased         NaN  02,20 Settled   \n",
+       "46         NaN        0.0      Purchased         NaN            NaN   \n",
+       "\n",
+       "                                          Case Status  \n",
+       "42  request has been sent to the finance departmen...  \n",
+       "43                           Payment DT 05-27-2020 \\n  \n",
+       "44                           payment dt 05-27-2020 \\n  \n",
+       "45  2/20/20: Settled per case mgr, \\nPaid complete...  \n",
+       "46  2/20/20: Settled per case mgr, \\nPaid complete...  \n",
+       "\n",
+       "[5 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f8969f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.dropna(subset=['Purch Amt'])\n",
+    "df = df[df['Purch Amt'] != 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "00784eeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 4035 entries, 42 to 8231\n",
+      "Data columns (total 33 columns):\n",
+      " #   Column             Non-Null Count  Dtype   \n",
+      "---  ------             --------------  -----   \n",
+      " 0   Case Name          4035 non-null   object  \n",
+      " 1   Account Name       4035 non-null   object  \n",
+      " 2   State              39 non-null     object  \n",
+      " 3   Rate               767 non-null    object  \n",
+      " 4   Provider Client    4024 non-null   category\n",
+      " 5   DOL                3162 non-null   object  \n",
+      " 6   Subject            4035 non-null   category\n",
+      " 7   Name of Procedure  3500 non-null   object  \n",
+      " 8   Case Stage         4035 non-null   object  \n",
+      " 9   Stage Chg Dt       4029 non-null   object  \n",
+      " 10  DOS                4026 non-null   object  \n",
+      " 11  Batch Dt           4013 non-null   object  \n",
+      " 12  Bill Amt           4035 non-null   float64 \n",
+      " 13  Purch Amt          4035 non-null   float64 \n",
+      " 14  Purch Dt           4015 non-null   object  \n",
+      " 15  Investor 1         4033 non-null   object  \n",
+      " 16  Port 1             4002 non-null   object  \n",
+      " 17  Inv 1 Purch $      3443 non-null   float64 \n",
+      " 18  Investor 2         700 non-null    object  \n",
+      " 19  Port 2             591 non-null    object  \n",
+      " 20  Inv 2 Purch $      3397 non-null   float64 \n",
+      " 21  Pay Dt             4035 non-null   object  \n",
+      " 22  Pay Amt            4026 non-null   float64 \n",
+      " 23  Inv 1 Pd Dt        3606 non-null   object  \n",
+      " 24  Inv 1 Pd $         3813 non-null   float64 \n",
+      " 25  Inv 2 Pd Dt        241 non-null    object  \n",
+      " 26  Inv 2 Pd $         3401 non-null   float64 \n",
+      " 27  Inv 3 Pd Dt        2 non-null      object  \n",
+      " 28  Inv 3 Pd $         3384 non-null   float64 \n",
+      " 29  Funding Status     4023 non-null   category\n",
+      " 30  Case Notes         176 non-null    object  \n",
+      " 31  Lien Notes         99 non-null     object  \n",
+      " 32  Case Status        2630 non-null   object  \n",
+      "dtypes: category(3), float64(8), object(22)\n",
+      "memory usage: 999.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "eb568f70",
    "metadata": {},
    "outputs": [],
